--- a/page1.html
+++ b/page1.html
@@ -36,7 +36,7 @@
     </div>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section once="" class="cid-rBDO5jvRtv" id="footer6-2">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section once="" class="cid-rBDO5jvRtv" id="footer6-2">
 
     
 
